5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1664_1398.log
== TEST (2019-04-16 11:04:30) 
-- CODE:
tmp = int(input())
if tmp > 200:
	print(round(8000+100*200+90*(tmp-(tmp//200)*200),2)
else:
	print(round(5000+tmp*100,2))
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:05:04) 
-- CODE:
tmp = int(input())
if tmp > 200:
	print(round(8000+100*200+90*(tmp-(tmp//200)*200),2)
else:
	print(round(5000+tmp*100,2))
-- ERROR:
File "XXXX", line 4
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:06:47) 
-- CODE:
tmp = int(input())
if tmp > 200:
	valor = 8000 + 100*200 + tmp-((tmp//200)*200)
	print(round(valor,2))
else:
	print(round(5000+tmp*100,2))
-- OUTPUT:
17100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:30) 
-- CODE:
tmp = int(input())
if tmp > 200:
	valor = 8000 + 100*200 + tmp-((tmp//200)*200)*90
	print(round(valor,2))
else:
	print(round(5000+tmp*100,2))
-- OUTPUT:
17100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:07:46) 
-- CODE:
tmp = int(input())
if tmp > 200:
	valor = 8000 + 100*200 + (tmp-((tmp//200)*200))*90
	print(round(valor,2))
else:
	print(round(5000+tmp*100,2))
-- EXECUTION TIME:
0.147729
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
17100
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
32500
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:48) 
-- CODE:
tmp = int(input())
if tmp > 200:
	valor = 8000 + 100*200 + (tmp-((tmp//200)*200))*90
	print(round(valor,2))
else:
	print(round(5000+tmp*100,2))
-- OUTPUT:
17100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:07:55) 
-- CODE:
tmp = int(input())
if tmp > 200:
	valor = 8000 + 100*200 + (tmp-((tmp//200)*200))*90
	print(round(valor,2))
else:
	print(round(5000+tmp*100,2))
-- OUTPUT:
17100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:08:55) 
-- CODE:
tmp = int(input())
if tmp > 200:
	valor = 8000 + 100*200 + (tmp-((tmp//200)*200))*90
	print(round(valor,2))
else:
	print(round(5000+tmp*100,2))
-- OUTPUT:
17100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:09:20) 
-- CODE:
tmp = float(input())
if tmp > 200:
	valor = 8000 + 100*200 + (tmp-((tmp//200)*200))*90
	print(round(valor,2))
else:
	print(round(5000+tmp*100,2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:09:26) 
-- CODE:
tmp = float(input())
if tmp > 200:
	valor = 8000 + 100*200 + (tmp-((tmp//200)*200))*90
	print(round(valor,2))
else:
	print(round(5000+tmp*100,2))
-- EXECUTION TIME:
0.173678
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
17100.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
32500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:09:44) 
-- CODE:
tmp = float(input())
if tmp > 200:
	valor = 8000 + 100*200 + (tmp-((tmp//200)*200))*90
	print(round(valor,2))
else:
	print(round(5000+tmp*100,2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:30) 
-- CODE:
tmp = float(input())
if tmp > 200:
	valor = 8000 + 100*200 + (tmp-((tmp//200)*200))*90
	print(round(valor,2))
if tmp <=200:
	print(round(5000+tmp*100,2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:38) 
-- CODE:
tmp = float(input())
if tmp > 200:
	valor = 8000 + 100*200 + (tmp-((tmp//200)*200))*90
	print(round(valor,2))
if tmp <=200:
	print(round(5000+tmp*100,2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:11:49) 
-- CODE:
tmp = float(input())
if tmp > 200:
	valor = 8000 + 100*200 + (tmp-((tmp//200)*200))*90
	print(round(valor,2))
else:
	print(round(5000+tmp*100,2))
-- EXECUTION TIME:
0.200045
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
17100.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
32500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:12:08) 
-- CODE:
tmp = float(input())
if tmp > 200:
	valor = 8000 + 100*200 + (tmp-((tmp//200)*200))*90
	print(round(valor,2))
else:
	print(round(5000+tmp*100,2))
-- EXECUTION TIME:
0.212751
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
17100.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
32500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:12:37) 
-- CODE:
tmp = float(input())
if tmp > 200:
	valor = 8000 + 100*200 + (tmp-200)*90
	print(round(valor,2))
else:
	print(round(5000+tmp*100,2))
-- EXECUTION TIME:
0.124379
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
17100.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
50500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
